# lesterli-mytodo

./: .env.example  .gitignore  .plan  README.md  docker-compose.yml
backend/: .dockerignore  Cargo.toml  Dockerfile  rustfmt.toml
backend/migrations/: 0001_init.sql  0002_users.sql  0003_todos.sql
backend/src/: config.rs  db.rs  error.rs  lib.rs  main.rs
backend/src/auth/: extractor.rs  jwt.rs  middleware.rs  password.rs
backend/src/models/: todo.rs  user.rs
backend/src/repo/: todos.rs
backend/src/routes/: auth.rs  health.rs  me.rs  todos.rs
backend/src/services/: auth.rs  todos.rs
backend/tests/: auth.rs  todos.rs
frontend/: .dockerignore  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/__tests__/: login.test.tsx  require-auth.test.tsx  todos.test.tsx
frontend/src/api/: auth.ts  client.ts  me.ts  todos.ts
frontend/src/components/: EmptyState.tsx  FilterBar.tsx  Header.tsx  LoadingState.tsx  RequireAuth.tsx  Toast.tsx  TodoForm.tsx  TodoItem.tsx
frontend/src/pages/: Login.tsx  Profile.tsx  Register.tsx  Todos.tsx
frontend/src/stores/: auth.ts
