[package]
name = "lesterli-mytodo-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
axum = "0.8.1"
dotenvy = "0.15.7"
jsonwebtoken = "9.3.1"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["migrate", "postgres", "runtime-tokio-rustls", "time", "uuid"] }
time = { version = "=0.3.45", features = ["serde"] }
tokio = { version = "1.44.2", features = ["macros", "net", "rt-multi-thread"] }
tower = { version = "0.5.2", features = ["util"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
uuid = { version = "1.11.0", features = ["serde", "v4"] }
validator = { version = "0.20.0", features = ["derive"] }
